idtype_api impl
